# total-space

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.txt  Makefile  Makefile.toml  README.md  legend.html
examples/: clients_server.rs  simple.rs
src/: agents.rs  claps.rs  configurations.rs  diagrams.rs  lib.rs  macros.rs  memoize.rs  messages.rs  models.rs  reactions.rs  transitions.rs  utilities.rs
tests/: client_server.rs  clients_server.rs  common.rs  managed_clients_server.rs  ordered_client_server.rs  test_client_server.rs  test_clients_server.rs  test_example.rs  test_managed_clients_server.rs  test_model.rs  test_ordered_client_server.rs  test_utils.rs  utils.rs
tests/expected/client_server/: client_states_final.dot  conditions.txt  path.txt  sequence.uml  server_states_final.dot  server_states_names_final.dot  transitions.txt
tests/expected/clients_server/: agents.txt  client_states.dot  client_states_merge.dot  client_states_names.dot  client_states_names_merge.dot  configurations.txt  path.txt  server_states.dot  server_states_merge.dot  server_states_names.dot  server_states_names_merge.dot  transitions.txt
tests/expected/example_clients_server/: test_client_states.dot  test_path.txt  test_sequence.uml  test_server_states.dot
tests/expected/example_simple/: test_1_1_path.txt  test_1_1_sequence.uml  test_2_1_path.txt  test_2_1_sequence.uml  test_agents.txt  test_client_states.dot  test_conditions.txt  test_configurations.txt  test_server_states.dot  test_transitions.txt
tests/expected/managed_clients_server/: agents.txt  client_states_names.dot  server_states.dot  server_states_names.dot
tests/expected/ordered_client_server/: configurations.txt  server_states.dot  transitions.txt
tests/expected/test_client_server/: abort.txt  client_states.dot  client_states_condensed.dot  client_states_final.dot  client_states_names.dot  compute.txt  path.txt  (+8 more)
(+29 files in other folders)
