[package]
name = "total-space"
version = "0.1.0"
authors = ["Oren Ben-Kiki <oren@ben-kiki.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "^0.9.1"
num-traits = "^0.2.8"
string_cache = "^0.8.1"
rayon = "^1.5.0"
strum = { version = "^0.20.0", features = ["derive"] }
strum_macros = "^0.20.0"
