[package]
name = "total-space"
version = "0.1.0"
authors = ["Oren Ben-Kiki <oren@ben-kiki.org>"]
edition = "2018"
license = "GPL-3.0"
description = "Explore the total space of states of communicating finite state machines."
repository = "https://github.com/orenbenkiki/total-space"
readme = "README.md"
keywords = [ "validation" ]
categories =[ "Algorithms", "Visualization" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33.0"
scc = "^0.4.8"
lazy_static = "^1.4.0"
num_cpus = "^1.0.0"
num-traits = "^0.2.8"
parking_lot = "^0.11.1"
rayon = "^1.5.0"
string_cache = "^0.8.1"
strum_macros = "^0.20.0"
strum = { version = "^0.20.0", features = [ "derive" ] }
